2005-07-21  Juanma Barranquero  <lekktu@gmail.com>

	* tramp.el (tramp-handle-load): Fix typo in error message.

2005-07-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-handle-expand-file-name): Discard call
	of `tramp-drop-volume-letter'.  It is not necessary, and there
	have been problems with (expand-file-name "~/.netrc" "/") in
	ange-ftp.  Reported by Richard G. Bielawski
	<Richard.G.Bielawski@wellsfargo.com>.

2005-07-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-do-copy-or-rename-file-out-of-band): Transfer
	message should always be visible.
	(tramp-handle-insert-directory, tramp-setup-complete)
	(tramp-set-process-query-on-exit-flag)
	(tramp-append-tramp-buffers): Pacify byte-compiler.
	(tramp-bug): Delete non-existing variables from list.  Apply
	`tramp-load-report-modules' as pre-hook.  Mask
	`tramp-password-prompt-regexp', `tramp-shell-prompt-pattern' and
	`shell-prompt-pattern' because of non-7bit characters.  Reported
	by Sebastian Luque <sluque@mun.ca>.
	(tramp-reporter-dump-variable, tramp-load-report-modules): New
	defuns.

2005-07-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-match-string-list): Remove function.
	(tramp-wait-for-regexp): Remove call of that function.  Suggested
	by Kim F. Storm <storm@cua.dk>.

2005-07-05  Lute Kamstra  <lute@gnu.org>

	Update FSF's address in GPL notices.

2005-06-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-set-auto-save-file-modes): Use octal integer
	code #o600 instead of octal character code ?\600.  The latter
	resulted in a syntax error with XEmacs.

2005-06-19  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in:
	* tramp.el:
	* tramp-ftp.el:
	* tramp-uu.el:
	* trampver.el.in: Adapt email addresses.

2005-06-14  Juanma Barranquero  <lekktu@gmail.com>

	* tramp.el (tramp-find-file-exists-command)
	(tramp-find-shell): Follow error conventions.

2005-05-17  Juanma Barranquero  <lekktu@gmail.com>
