@@ -1,3 +1,7 @@
+2005-07-26  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-user-regexp): Allow "@" as part of user name.
+
 2005-07-21  Juanma Barranquero  <lekktu@gmail.com>
 
 	* tramp.el (tramp-handle-load): Fix typo in error message.
